98) kernel: net: ipv4: fix NULL checking in devinet_ioctl().<br>
99) kernel: net: ipv6: lock socket in ip6_datagram_connect().<br>
100) kernel: net: ipv6: update flowi6_oif in ip6_dst_lookup_flow if not set.<br>
101) kernel: net: ipv6: flush and refresh nd cache on netdev_change change (as ipv4).<br>
102) kernel: net: ipv6: make ipv6_is_mld() inline and use it from ip6_mc_input().<br>
103) kernel: net: ipv6: make MLD packets to only be processed locally.<br>
104) kernel: net: ipv6: fix MLD Query message check.<br>
105) kernel: net: netfilter: ip[6]t_REJECT: fix wrong transport header pointer in TCP reset.<br>
106) kernel: net: netfilter: ip6t_REJECT: skip checksum verification for outgoing ipv6 packets.<br>
107) kenrel: net: netfilter: bridge: don't leak skb in error paths.<br>
108) kernel: net: packet: read num_members once in packet_rcv_fanout().<br>
109) kernel: net: packet: avoid out of bounds read in round robin fanout.<br>
110) kernel: net: inet: frags: fix defragmented packet's IP  header for af_packet.<br>
111) kernel: net: socket: fix the wrong returns for recvmsg and sendmsg.<br>
112) kernel: backport new ASIX AX88179/178A and Realtek RTL8152/8153 USB 3.0/2.0 Ethernet drivers.<br>
<br>
<br>
<b>3.4.x</b><br>
<br>
<br>
<b>TODO:</b><br>
1) full russian ui (work end ~95%).<br>
2) need fix ui for channel 5GHz select (allow 36-64 and 136—165 channels for RU AbandRegion=7).<br>
3) need add subchannel select for 5GHz module.<br>
4) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
5) port support l2tp/pptp hardware NAT offload (really needed? in sdk very ugly code).<br>
6) in fair faif future: need add in firewall support xt_time matches for parental control.<br>
7) in fair faif future: need add davfs2 webui for managment online disk drives (as yandex disk and others very slow, really need?).<br>
8) in fair fair future: need add scripts and webui for support 3g usb dongles uses qmi protocol.<br>
<br>
<br>
<br>